@@ -1,5 +1,8 @@
  (Format: Year/Month/Day)
 Changes for 1.0.0:
+*07/08/27:
+   * Fix hardcoded Mod1, use ModKey() now (Mathias)
+     Window.cc
 *07/08/20:
    * Fix some focus issues with moving windows between workspaces (Mark)
      FocusControl.cc
